--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -6,6 +6,8 @@
 .profile-image img {
     width: 200px;
     border-radius: 50%;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transform: translateZ(50px);
 }
 
 .profile-name {
