--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -4,11 +4,12 @@
 }
 
 .profile-image img {
-    height: 204px;
-    width: 188px;
+    height: 220px;
+    width: 220px;
     border-radius: 50%;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     transform: translateZ(50px);
+    object-fit: cover;
 }
 
 .profile-name {
