--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -35,7 +35,7 @@
 }
 
 .projectHeader {
-    font-size: 14px !important;
+    font-size: 16px !important;
     font-weight: 400;
     text-align: justify;
 }
@@ -188,6 +188,11 @@
 .project-img {
     border-radius: 50%;
     width: 75%;
+}
+
+.certificate-img {
+    border-radius: 12px;
+    width: 100%;
 }
 
 .link-icon i{
